[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/stats/bar/health_bar_background.png" type="Texture" id=1]
[ext_resource path="res://interface/stats/bar/mana_bar_background.png" type="Texture" id=2]
[ext_resource path="res://interface/stats/bar/exp_bar_background.png" type="Texture" id=3]
[ext_resource path="res://interface/stats/bar/mana_bar.png" type="Texture" id=4]
[ext_resource path="res://interface/stats/bar/health_bar.png" type="Texture" id=5]
[ext_resource path="res://interface/stats/bar/exp_bar.png" type="Texture" id=6]
[ext_resource path="res://scripts/interface/player/bars.gd" type="Script" id=7]

[node name="BarContainer" type="Control" groups=["interface_bars"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="HealthBarBackground" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 17.0
texture = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="HealthBarBackground"]
margin_left = 17.0
margin_top = 7.0
margin_right = 60.0
margin_bottom = 9.0
texture_progress = ExtResource( 5 )

[node name="ManaBarBackground" type="TextureRect" parent="."]
margin_left = 15.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 15.0
texture = ExtResource( 2 )

[node name="ManaBar" type="TextureProgress" parent="ManaBarBackground"]
margin_left = 15.0
margin_top = 7.0
texture_progress = ExtResource( 4 )

[node name="ExpBarBackground" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -69.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 17.0
texture = ExtResource( 3 )

[node name="ExpBar" type="TextureProgress" parent="ExpBarBackground"]
margin_left = 4.0
margin_top = 7.0
texture_progress = ExtResource( 6 )
fill_mode = 1

[node name="Animation" type="Tween" parent="."]
